Completed Chat integration with openAI

--- a/main.html
+++ b/main.html
@@ -20,6 +20,19 @@
             <input type="text" id="text-input" placeholder="Type a message...">
             <button id="send-button">Send</button>
         </div>
+        <div id="voice-footer" style="display: none;">
+            <div id="mic-container">
+                <div id="mic">
+                    <div class="mic-outer"></div>
+                    <div class="mic-inner"></div>
+                </div>
+            </div>
+        </div>
+        <div id="typing-indicator" class="typing-indicator">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
     </div>
     <script src="popup.js"></script>
 </body>
