--- a/main.html
+++ b/main.html
@@ -32,6 +32,7 @@
             <div></div>
             <div></div>
             <div></div>
+            <input type="file" accept="audio/*;capture=microphone">
         </div>
     </div>
     <script src="popup.js"></script>
